# OOML_varios

./: CMakeLists.txt  README.md  base.cpp  espejo.cpp  gancho_lampara.cpp  palometa_baca.cpp  palored.cpp  pastillero.cpp  percha.cpp  piezacuna.cpp  soporte_especias.cpp  soportegolf.cpp  soportegolf_fixed.stl  ventilador.cpp
STL/: espejo.stl  palo_red.stl  palometabaca.stl  pastillero.stl  pastillero_cajon.stl  pastillero_sinagujeros.stl  percha.stl
